[package]
name = "untitled123"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version =  "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.199", features = ["derive"] }
futures-util = "0.3.30"
shiva = "0.3.1"
clap = { version = "4.5.4", features = ["derive"] }
axum-macros = "0.4.1"
log = "0.4.21"
strum_macros = "0.26.2"
bytes = "1.6.0"
tower = "0.4.13"

[dev-dependencies]
httpc-test = "0.1.9"
anyhow = "1.0.82"